--- a/sass/components/section-best.scss
+++ b/sass/components/section-best.scss
@@ -6,7 +6,7 @@
   position: relative;
   // outline: 1px solid #000;
 }
-.main__title--best {
+.section__title--best {
   text-align: center;
   margin-bottom: 50px;
 }
