--- a/sass/layout/adjustment.scss
+++ b/sass/layout/adjustment.scss
@@ -1,7 +1,6 @@
 .container {
   width: 940px;
   height: 100%;
-  min-height: 500px;
   margin: 0 auto;
   padding: 0;
   // outline: 1px solid #000;
@@ -9,16 +8,32 @@
 .cont__not-padding{
   padding: 0;
 }
-.sections {
+.section {
   min-width: 100%;
   min-height: 650px;
   height: 100vh;
 }
-.main__title {
+.section__title {
   font-family: 'Gagalin';
   font-size: 70px;
   color: $BlackText;
   padding: 0;
   margin: 0;
   text-transform: uppercase;
+}
+.section__btn {
+  font-family: 'Ubuntu';
+  font-size: 13px;
+  font-weight: 700;
+  display: inline-block;
+  padding:0 15px;
+  background: #e45028;
+  color: #fff;
+  border-radius: 3px;
+  text-decoration: none;
+  text-transform: uppercase;
+  line-height: 34px;
+  &:hover {
+    background: #c1401e;
+  }
 }
