--- a/sass/layout/variables.scss
+++ b/sass/layout/variables.scss
@@ -1,2 +1,9 @@
-$ColorOrange: #f9b43b;
+// clolor
+$Yellow: #f9b43b;
 $BlackText: #2f3234;
+
+// resolutions
+// $laptop: 992px;
+$tablets: 768px;
+$phones: 480px;
+$mphones: 320px;
