--- a/sass/components/section-best.scss
+++ b/sass/components/section-best.scss
@@ -8,11 +8,11 @@
 }
 .section__title--best {
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: rem(60px);
 }
 .best__content {
   // outline: 1px solid #000;
-  width: 940px;
+  width: 100%;
   position: absolute;
   top: 45%;
   left: 50%;
@@ -20,40 +20,76 @@
 }
 
 .best__list {
-  @extend %clearfix;
   // outline: 1px solid green;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  @include phones() {
+    flex-direction: column;
+  }
 }
 .best__item {
-  /*outline: 1px solid #ccc;*/
-  float: left;
-  width: 33.3333%;
+  // outline: 1px solid #ccc;
+  // width: 33.3333%;
+  flex: 1;
+  @include phones() {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    margin-bottom: rem(50px);
+  }
 }
 .best__block-image {
-  /*outline: 1px solid #000;*/
-  height: 120px;
-  position: relative;
+  // outline: 1px solid #000;
+  height: rem(110px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  @include phones() {
+    align-items: flex-start;
+  }
 }
-.best__block-img {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.best__block-svg {
+  height: rem(100px);
+  @include phones() {
+    width: rem(100px);
+  }
+  // outline: 1px solid #000;
+}
+.best--meat {
+  fill: #e25028;
+}
+.best--hand {
+  fill: #f8b43a;
+}
+.best--natural {
+  fill: #8ac03e;
+}
+
+.best__text {
+  text-align: center;
+  @include phones() {
+    text-align: left;
+    padding-left: rem(15px);
+  }
 }
 .best__block-title {
   font-family: 'Lifehack';
-  font-size: 22px;
+  font-size: rem(22px);
   font-weight: lighter;
-  letter-spacing: 1px;
-  margin: 18px 20px;
-  text-align: center;
+  letter-spacing: rem(1px);
+  margin: rem(18px) rem(20px);
   color: #2f3234;
+  @include phones() {
+    margin-top: rem(5px);
+  }
 }
-.best__block-text {
+.best__item p {
   font-family: 'Ubuntu';
-  font-size: 14px;
+  font-size: rem(14px);
   font-weight: lighter;
-  line-height: 22px;
-  text-align: center;
-  padding: 0 15px;
+  line-height: rem(22px);
+  padding: 0 rem(15px);
   color: #787776;
 }
