--- a/sass/components/section-comments.scss
+++ b/sass/components/section-comments.scss
@@ -1,51 +1,74 @@
 .comments {
-  background: url('../../img/section-7.jpg') center no-repeat;;
+  background: #000;
 }
-
 .comments__list {
-  @extend %clearfix;
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 .comments__item {
   width: 25%;
-  min-height: 400px;
-  height: 50vh;
+  min-height: rem(300px);
+  height: 50%;
   // outline: 1px solid #fff;
-  float: left;
-  display: block;
   background-position: center center;
   background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+  overflow: hidden;
   filter: grayscale(1);
 
   &:hover .comments__content {
-    visibility: visible;
+    opacity: 1;
+    transform: scale(1);
+  }
+  @include tablets() {
+    width: 50%;
+    min-height: rem(150px);
+    height: 25%;
   }
 }
 
 .comments__content {
+  position: absolute;
   background: rgba(0,0,0, .7);
   width: 100%;
-  min-width: 200px;
   height: 100%;
   padding: 7%;
-  outline: 1px solid red;
   color: #fff;
-  visibility: hidden;
+  transform: scale(.7);
+  opacity: 0;
+  transition:all .4s ease;
+  overflow: hidden;
+  @include tablets() {
+    text-align: center;
+    padding: 5%;
+  }
 }
 
 .comments__name {
   font-family: 'Gagalin';
-  font-size: 14px;
-  letter-spacing: 1px;
+  font-size: rem(14px);
+  letter-spacing: rem(1px);
   margin: 7% auto;
   text-transform: uppercase;
+  @include tablets() {
+    margin: 0 auto 5%;
+  }
 }
 .comments__text {
   font-family: 'Ubuntu';
   font-weight: lighter;
-  line-height: 30px;
+  line-height: rem(30px);
+  @include tablets() {
+    line-height: rem(20px);
+  }
 }
 .section__btn--comments {
-  margin: 20px 0;
+  margin: rem(20px) 0 0 0;
+  @include tablets() {
+    margin: rem(10px) 0 0 0;
+  }
 }
