--- a/sass/layout/base.scss
+++ b/sass/layout/base.scss
@@ -1,8 +1,8 @@
 body {
+  font-size: rem(16px);
   margin: 0;
   padding: 0;
   font-family: 'Ubuntu', Arial, Helvetica, sans-serif;
-  line-height: 1.42;
   color: #000;
 }
 * {
@@ -31,4 +31,12 @@ ul {
   list-style: none;
   padding: 0;
   margin: 0;
+}
+h1,h2,h3,h4,h5,h6 {
+  margin: 0;
+  font-weight: normal;
+}
+p {
+  margin: 0;
+  padding: 0;
 }
