Unfinished homework for the third week

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,7 @@
 
 @import "components/section-header.scss";
 @import "components/section-best.scss";
+@import "components/section-slider.scss";
 @import "components/section-team.scss";
 @import "components/section-menu.scss";
 @import "components/section-comments.scss";
