--- a/css/main.css
+++ b/css/main.css
@@ -141,7 +141,7 @@ p {
   padding: 0 0.9375rem;
   background: #e45028;
   color: #fff;
-  border-radius: 0.1875rem;
+  border-radius: 0.3125rem;
   text-decoration: none;
   text-transform: uppercase;
   line-height: 2.125rem;
@@ -548,6 +548,192 @@ p {
   line-height: 1.375rem;
   padding: 0 0.9375rem;
   color: #787776; }
+
+.slider {
+  background: #f9b43b;
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(20%, #f9b43b), color-stop(#eb8d38), to(#f9b43b));
+  background-image: -webkit-linear-gradient(top, #f9b43b 20%, #eb8d38, #f9b43b);
+  background-image: -o-linear-gradient(top, #f9b43b 20%, #eb8d38, #f9b43b);
+  background-image: linear-gradient(to bottom, #f9b43b 20%, #eb8d38, #f9b43b); }
+
+.slider__wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: stretch;
+  -webkit-align-items: stretch;
+  -ms-flex-align: stretch;
+  align-items: stretch; }
+
+.slider__left,
+.slider__right {
+  outline: 1px solid green;
+  width: 7%; }
+
+.slider__center {
+  width: 86%;
+  outline: 1px solid red;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+.slider__image {
+  position: relative; }
+
+.slider__pic {
+  width: 100%;
+  margin: 70px auto; }
+
+.composition {
+  position: absolute;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row; }
+  .composition__link {
+    position: relative;
+    text-decoration: none;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    -webkit-box-align: start;
+    -webkit-align-items: flex-start;
+    -ms-flex-align: start;
+    align-items: flex-start; }
+  .composition__link:hover .composition__main {
+    background: #e35028; }
+  .composition__main {
+    background: #f08c33;
+    width: 90px;
+    height: 90px;
+    padding: 10px 15px;
+    border-radius: 7px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center; }
+  .composition__svg {
+    width: 80%;
+    fill: #fff; }
+  .composition__svg__text {
+    font-family: 'Gagalin';
+    font-size: 14px;
+    color: #fff; }
+  .composition__list {
+    background: rgba(255, 255, 255, 0.9);
+    padding: 15px;
+    border-radius: 7px;
+    position: absolute;
+    left: 100%; }
+
+.slider__text {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  margin-left: 20px;
+  margin-bottom: 120px;
+  width: 50%; }
+
+.slider--title {
+  color: #fff;
+  line-height: 65px; }
+
+.slider__text p {
+  font-family: 'Ubuntu', Arial;
+  font-size: 14px;
+  font-weight: lighter;
+  line-height: 24px;
+  margin: 30px auto;
+  color: #fff; }
+
+.slider__price {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  -webkit-box-align: baseline;
+  -webkit-align-items: baseline;
+  -ms-flex-align: baseline;
+  align-items: baseline; }
+
+.price {
+  font-family: 'Gagalin';
+  font-size: 30px;
+  color: #e35028;
+  margin-right: 30px; }
+  .price span {
+    font-size: 72px; }
 
 .team {
   background: url("../img/section-4.jpg") center no-repeat;
