--- a/css/main.css
+++ b/css/main.css
@@ -557,6 +557,7 @@ p {
   background-image: linear-gradient(to bottom, #f9b43b 20%, #eb8d38, #f9b43b); }
 
 .slider__wrapper {
+  position: relative;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -577,12 +578,56 @@ p {
 
 .slider__left,
 .slider__right {
-  outline: 1px solid green;
-  width: 7%; }
+  width: 7%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+  -webkit-justify-content: flex-end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center; }
+  @media screen and (max-width: 480px) {
+    .slider__left,
+    .slider__right {
+      position: absolute; } }
+
+@media screen and (max-width: 480px) {
+  .slider__left {
+    left: 0;
+    top: 50%; } }
+
+.slider__right {
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start; }
+  @media screen and (max-width: 480px) {
+    .slider__right {
+      right: 0;
+      top: 50%; } }
+
+.slider__arrow {
+  width: 1.875rem;
+  height: 1.875rem;
+  fill: #fff; }
+
+.arrow--right {
+  -webkit-transform: rotate(270deg);
+  -ms-transform: rotate(270deg);
+  transform: rotate(270deg); }
+
+.arrow--left {
+  -webkit-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  transform: rotate(90deg); }
 
 .slider__center {
   width: 86%;
-  outline: 1px solid red;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -600,13 +645,35 @@ p {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center; }
+  @media screen and (max-width: 768px) {
+    .slider__center {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+      flex-direction: column; } }
+  @media screen and (max-width: 480px) {
+    .slider__center {
+      width: 100%; } }
 
 .slider__image {
   position: relative; }
 
+@media screen and (max-width: 768px) {
+  .slider__img {
+    padding: 3.75rem 0.625rem 2.5rem; } }
+
+@media screen and (max-width: 480px) {
+  .slider__img {
+    padding: 90px 40px 20px 40px; } }
+
 .slider__pic {
   width: 100%;
-  margin: 70px auto; }
+  margin: 4.375rem auto;
+  display: block; }
+  @media screen and (max-width: 768px) {
+    .slider__pic {
+      margin: 0.625rem auto; } }
 
 .composition {
   position: absolute;
@@ -641,12 +708,14 @@ p {
     align-items: flex-start; }
   .composition__link:hover .composition__main {
     background: #e35028; }
+  .composition__link:hover .composition__list {
+    display: block; }
   .composition__main {
     background: #f08c33;
     width: 90px;
     height: 90px;
-    padding: 10px 15px;
-    border-radius: 7px;
+    padding: 0.625rem 0.9375rem;
+    border-radius: 0.4375rem;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -669,14 +738,98 @@ p {
     fill: #fff; }
   .composition__svg__text {
     font-family: 'Gagalin';
-    font-size: 14px;
+    font-size: 0.875rem;
     color: #fff; }
   .composition__list {
     background: rgba(255, 255, 255, 0.9);
-    padding: 15px;
-    border-radius: 7px;
+    padding: 0.9375rem 1.25rem;
+    border-radius: 0.4375rem;
     position: absolute;
-    left: 100%; }
+    left: 100%;
+    font-family: 'Ubuntu';
+    font-size: 0.875rem;
+    color: #2f3234;
+    display: none; }
+  .composition__item {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-justify-content: space-around;
+    -ms-flex-pack: distribute;
+    justify-content: space-around;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    margin-bottom: 0.625rem; }
+    .composition__item:last-child {
+      margin-bottom: 0; }
+  .composition .comp__svg {
+    display: block;
+    width: 2.8125rem;
+    height: 2.8125rem;
+    fill: #e35028; }
+  .composition .svg--cheese,
+  .composition .svg--buns {
+    fill: #f9b43b; }
+  .composition .svg--salad,
+  .composition .svg--cucumber {
+    fill: #8ac03e; }
+  .composition .comp__product {
+    margin-left: 1.875rem;
+    width: 6.25rem;
+    font-weight: medium;
+    overflow: hidden; }
+  .composition .comp__amount {
+    text-align: right;
+    width: 3.75rem;
+    font-weight: lighter; }
+
+.kkal {
+  bottom: 0;
+  position: absolute;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  width: 80px;
+  height: 80px;
+  opacity: .5; }
+  @media screen and (max-width: 768px) {
+    .kkal {
+      right: 0;
+      top: 0; } }
+  .kkal__svg {
+    width: 60px;
+    height: 60px;
+    fill: #fff; }
+  .kkal__num {
+    font-family: 'Gagalin';
+    font-size: 20px;
+    display: block; }
+  .kkal__text {
+    font-family: 'Gagalin';
+    font-size: 14px;
+    color: #fff; }
 
 .slider__text {
   display: -webkit-box;
@@ -692,21 +845,39 @@ p {
   -webkit-justify-content: flex-start;
   -ms-flex-pack: start;
   justify-content: flex-start;
-  margin-left: 20px;
-  margin-bottom: 120px;
+  margin-left: 1.25rem;
+  margin-bottom: 7.5rem;
   width: 50%; }
+  @media screen and (max-width: 768px) {
+    .slider__text {
+      text-align: center;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+      -ms-flex-align: center;
+      align-items: center;
+      width: 100%;
+      margin-left: 0;
+      margin-bottom: 0;
+      padding: 0 10%; } }
+  @media screen and (max-width: 480px) {
+    .slider__text {
+      padding: 0 5%; } }
 
 .slider--title {
   color: #fff;
-  line-height: 65px; }
+  line-height: 4.0625rem; }
 
 .slider__text p {
   font-family: 'Ubuntu', Arial;
-  font-size: 14px;
+  font-size: 0.875rem;
   font-weight: lighter;
-  line-height: 24px;
-  margin: 30px auto;
+  line-height: 1.5rem;
+  margin: 1.875rem auto;
   color: #fff; }
+  @media screen and (max-width: 480px) {
+    .slider__text p {
+      font-size: 1rem;
+      margin: 1.25rem auto; } }
 
 .slider__price {
   display: -webkit-box;
@@ -729,11 +900,11 @@ p {
 
 .price {
   font-family: 'Gagalin';
-  font-size: 30px;
+  font-size: 1.875rem;
   color: #e35028;
-  margin-right: 30px; }
+  margin-right: 1.875rem; }
   .price span {
-    font-size: 72px; }
+    font-size: 4.5rem; }
 
 .team {
   background: url("../img/section-4.jpg") center no-repeat;
