--- a/css/main.css
+++ b/css/main.css
@@ -182,6 +182,91 @@ p {
     .nav-section {
       display: none; } }
 
+.full-window {
+  display: none;
+  background: #2f3234;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 10; }
+
+.full__top {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  height: 15%; }
+
+.full--logo {
+  margin: 10px 20px; }
+
+.full__close {
+  background: url("../img/full-close.png") center center no-repeat;
+  background-size: cover;
+  display: block;
+  width: 20px;
+  height: 20px;
+  margin-top: 30px;
+  margin-right: 35px; }
+
+.full-nav {
+  height: 85%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
+  .full-nav__item {
+    display: -webkit-inline-box;
+    display: -webkit-inline-flex;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    line-height: 2.125rem;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center; }
+    .full-nav__item::after {
+      content: "";
+      display: block;
+      background: #fff;
+      width: 0.4375rem;
+      height: 0.4375rem;
+      border-radius: 50%;
+      margin: 0.9375rem auto; }
+    .full-nav__item:last-child::after {
+      content: none; }
+  .full-nav__link {
+    font-family: 'Ubuntu';
+    font-weight: normal;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    color: #fff;
+    text-decoration: none; }
+
 .hero {
   background: url("../img/section-1.jpg") center no-repeat;
   background-size: cover;
@@ -1530,9 +1615,13 @@ p {
 .footer {
   background: url("../img/fon-footer.jpg") center center no-repeat;
   background-size: cover;
+  height: 3.75rem;
   position: absolute;
   bottom: 0;
   width: 100%; }
+  @media screen and (max-width: 480px) {
+    .footer {
+      height: auto; } }
 
 .footer--container {
   display: -webkit-box;
