Bug fixes in homework

--- a/sass/components/section-comments.scss
+++ b/sass/components/section-comments.scss
@@ -45,6 +45,10 @@
   @include tablets() {
     text-align: center;
     padding: 5%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
 }
 
@@ -63,11 +67,16 @@
   font-weight: lighter;
   font-size: rem(14px);
   line-height: rem(30px);
+  overflow: hidden;
   @include tablets() {
     line-height: rem(20px);
   }
 }
+.comments__btn {
+  height: 30px;
+}
 .section__btn--comments {
+  display: inline-block;
   margin: rem(20px) 0 0 0;
   @include tablets() {
     margin: rem(10px) 0 0 0;
