--- a/css/main.css
+++ b/css/main.css
@@ -696,6 +696,12 @@ p {
       right: 0;
       top: 50%; } }
 
+.slider__btn {
+  padding: 0;
+  border: none;
+  cursor: pointer;
+  background: transparent; }
+
 .slider__arrow {
   width: 1.875rem;
   height: 1.875rem;
@@ -771,7 +777,10 @@ p {
   -webkit-flex-direction: row;
   -ms-flex-direction: row;
   flex-direction: row; }
-  .composition__link {
+  .composition__btn {
+    border: none;
+    padding: 0;
+    background: transparent;
     position: relative;
     text-decoration: none;
     display: -webkit-box;
@@ -791,9 +800,9 @@ p {
     -webkit-align-items: flex-start;
     -ms-flex-align: start;
     align-items: flex-start; }
-  .composition__link:hover .composition__main {
+  .composition__btn:hover .composition__main {
     background: #e35028; }
-  .composition__link:hover .composition__list {
+  .composition__btn:hover .composition__list {
     display: block; }
   .composition__main {
     background: #f08c33;
@@ -948,7 +957,12 @@ p {
     .slider__text {
       padding: 0 5%; } }
 
-.slider--title {
+.burger__title {
+  font-family: 'Gagalin';
+  font-size: 4.375rem;
+  padding: 0;
+  margin: 0;
+  text-transform: uppercase;
   color: #fff;
   line-height: 4.0625rem; }
 
@@ -1227,7 +1241,9 @@ p {
 .item__link {
   font-family: 'Gagalin';
   font-size: 2.5rem;
-  background: url("../img/sprite-accordeon.png") no-repeat;
+  background-image: url("../img/sprite-accordeon.png");
+  background-color: rgba(0, 0, 0, 0.6);
+  background-blend-mode: darken;
   background-size: cover;
   height: 100%;
   width: 5rem;
@@ -1336,7 +1352,20 @@ p {
   @media screen and (max-width: 768px) {
     .comments__content {
       text-align: center;
-      padding: 5%; } }
+      padding: 5%;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -webkit-box-pack: justify;
+      -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+      justify-content: space-between; } }
 
 .comments__name {
   font-family: 'Gagalin';
@@ -1352,12 +1381,17 @@ p {
   font-family: 'Ubuntu';
   font-weight: lighter;
   font-size: 0.875rem;
-  line-height: 1.875rem; }
+  line-height: 1.875rem;
+  overflow: hidden; }
   @media screen and (max-width: 768px) {
     .comments__text {
       line-height: 1.25rem; } }
 
+.comments__btn {
+  height: 30px; }
+
 .section__btn--comments {
+  display: inline-block;
   margin: 1.25rem 0 0 0; }
   @media screen and (max-width: 768px) {
     .section__btn--comments {
@@ -1610,15 +1644,28 @@ p {
 
 .map {
   background: url("../img/section-8.jpg") center center no-repeat;
-  background-size: cover; }
+  background-size: cover;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start; }
 
 .footer {
   background: url("../img/fon-footer.jpg") center center no-repeat;
   background-size: cover;
   height: 3.75rem;
+  width: 100%;
   position: absolute;
-  bottom: 0;
-  width: 100%; }
+  bottom: 0; }
   @media screen and (max-width: 480px) {
     .footer {
       height: auto; } }
@@ -1655,7 +1702,7 @@ p {
   font-family: 'Ubuntu';
   font-size: 0.875rem;
   color: #fff;
-  margin-top: 0.3125rem; }
+  margin-top: 0.625rem; }
   @media screen and (max-width: 480px) {
     .footer__text {
       margin-top: 0.9375rem;
@@ -1730,3 +1777,16 @@ p {
   fill: #fff;
   width: 1.25rem;
   height: 1.25rem; }
+
+.content-map {
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+  outline: 1px solid red;
+  background: rgba(0, 0, 0, 0.5); }
+
+.burger__map {
+  overflow: hidden;
+  width: 100%;
+  height: 100%; }
