--- a/sass/components/section-map.scss
+++ b/sass/components/section-map.scss
@@ -1,6 +1,6 @@
 .map {
-  background: url('../img/section-8.jpg') center center no-repeat;
-  background-size: cover;
+  background: linear-gradient(to bottom, #F6EFD2, #ccc);
+
   display: flex;
   flex-direction: column;
   justify-content:flex-start;
