--- a/sass/layout/adjustment.scss
+++ b/sass/layout/adjustment.scss
@@ -166,3 +166,25 @@ html {
       text-decoration: none;
     }
 }
+.form__modal {
+  background: #fff;
+  font-family: 'Ubuntu';
+  font-weight: lighter;
+  font-size: 14px;
+  padding: 15px;
+  border-radius: 7px;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, .5);
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: none;
+  text-align: center;
+}
+.modal__text {
+  margin-bottom: 20px;
+}
+.section__btn--modal {
+  border: none;
+  cursor: pointer;
+}
