--- a/sass/components/section-map.scss
+++ b/sass/components/section-map.scss
@@ -1,5 +1,6 @@
 .map {
   background: linear-gradient(to bottom, #F6EFD2, #ccc);
+  position: relative;
 
   display: flex;
   flex-direction: column;
