--- a/sass/layout/adjustment.scss
+++ b/sass/layout/adjustment.scss
@@ -10,11 +10,16 @@ html {
   }
 }
 .wrapper {
-  position: relative;
-  width: 100%;
   //min-width: rem(940px) + rem(20px);
-  min-height: 100%;
+  height: 100%;
   overflow: hidden;
+}
+.main {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  top: 0;
+  transition: top 1s ease;
 }
 .container {
   width: 95%;
@@ -68,7 +73,7 @@ html {
   width: rem(16px);
   right: rem(40px);
   top: rem(100px);
-
+  z-index: 30;
   &__item {
     margin-bottom: rem(5px);
   }
@@ -165,4 +170,26 @@ html {
       color: #fff;
       text-decoration: none;
     }
+}
+.form__modal {
+  background: #fff;
+  font-family: 'Ubuntu';
+  font-weight: lighter;
+  font-size: 14px;
+  padding: 15px;
+  border-radius: 7px;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, .5);
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: none;
+  text-align: center;
+}
+.modal__text {
+  margin-bottom: 20px;
+}
+.section__btn--modal {
+  border: none;
+  cursor: pointer;
 }
